[gd_scene load_steps=6 format=3 uid="uid://ciyqy4foosh4b"]

[ext_resource type="Script" uid="uid://23r0nrdb757d" path="res://Scene/Scripts/LoreModal.gd" id="1_4566m"]
[ext_resource type="Shader" uid="uid://daaix0yjbxxaw" path="res://Scene/Modals/LoreModal.gdshader" id="2_yw5l5"]
[ext_resource type="FontFile" uid="uid://s7s3defn6mn4" path="res://Fonts/Julygo.ttf" id="3_lk3nl"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jc8ku"]
shader = ExtResource("2_yw5l5")
shader_parameter/radius = 3.5
shader_parameter/darken = 0.12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yedsg"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="LoreModal" type="Control"]
visible = false
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4566m")

[node name="BackgroundBlur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_jc8ku")
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ModalContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.9
theme_override_styles/panel = SubResource("StyleBoxFlat_yedsg")

[node name="ClickShield" type="ColorRect" parent="ModalContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="ContentContainer" type="RichTextLabel" parent="ModalContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("3_lk3nl")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true

[node name="Rodape" type="Label" parent="ModalContainer"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -168.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "Clique para continuar"
horizontal_alignment = 3
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
